--- a/src/main/resources/templates/BrandIndex.html
+++ b/src/main/resources/templates/BrandIndex.html
@@ -40,32 +40,36 @@
           </tr>
         </tbody>
     </table>
+    <div th:if="${totalPages >1}">
+		<div class="row" style="display: flex; flex-direction:row;">
+		
+			<div style="padding-right: 10px;">
+				Total rows:[[${totalItems}]]
+			</div>
+			
+			<div style="padding-right: 10px;">
+				<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+				<a th:if="${currentPage !=i}" th:href="@{'/brand/page/'+${i}}">[[${i}]]</a>
+				<span th:unless="${currentPage !=i}">[[${i}]]</span> &nbsp; &nbsp;
+				</span>
+			</div>
+			
+			<div style="padding-right: 10px;">
+				<a th:if="${currentPage < totalPages}" th:href="@{'/brand/page/'+${currentPage+1}}">Next</a>
+				<span th:unless="${currentPage < totalPages}">Next</span>
+			</div>
+			
+			<div style="padding-right: 10px;">
+				<a th:if="${currentPage < totalPages}" th:href="@{'/brand/page/'+${totalPages}}">Last</a>
+				<span th:unless="${currentPage < totalPages}">Last</span>
+			</div>
+				
+		</div>
+	</div>
     </div>
     
     
-    <div th:if="${totalPages >1}">
-<div class="row col-sm-10">
-<div class="col-sm-2">
-Total rows:[[${totalItems}]]
 
-
-</div>
-<div class="col-sm-1">
-<span th:each="i: ${#numbers.sequence(1, totalPages)}">
-<a th:if="${currentPage !=i}" th:href="@{'/brand/page/'+${i}}">[[${i}]]</a>
-<span th:unless="${currentPage !=i}">[[${i}]]</span> &nbsp; &nbsp;
-</span>
-</div>
-<div class="col-sm-1">
-<a th:if="${currentPage < totalPages}" th:href="@{'/brand/page/'+${currentPage+1}}">Next</a>
-<span th:unless="${currentPage < totalPages}">Next</span>
-</div>
-<div class="col-sm-1">
-<a th:if="${currentPage < totalPages}" th:href="@{'/brand/page/'+${totalPages}}">Last</a>
-<span th:unless="${currentPage < totalPages}">Last</span>
-</div>
-</div>
-</div>
 
 	 <br/>
     
