--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -15,8 +15,8 @@
 	<div style="padding-left: 50px">
 	<form th:action="@{/product/listproducts}" class="search"> 
    <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" style="height: 33px"/>&nbsp;
-   <input type="submit" value="search" class="btn btn-primary"/>&nbsp;
-   <input type="button" value="clear" id="btnClear" onclick="clearSearch()" class="btn btn-danger"/>
+   <input type="submit" value="Search" class="btn btn-primary"/>&nbsp;
+   <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" class="btn btn-danger"/>
 	</form>
 	</div>
 	
@@ -77,16 +77,19 @@ Total rows:[[${totalItems}]]
 </div>
 <div class="col-sm-1">
 <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-<a th:if="${currentPage !=i}" th:href="@{'/product/page/'+${i}}">[[${i}]]</a>
+<a th:if="${currentPage !=i and session.search == null}" th:href="@{'/product/page/'+${i}}">[[${i}]]</a>
+<a th:if="${currentPage !=i and session.search != null}" th:href="@{'/product/page/'+${i}+'/search'}">[[${i}]]</a>
 <span th:unless="${currentPage !=i}">[[${i}]]</span> &nbsp; &nbsp;
 </span>
 </div>
 <div class="col-sm-1">
-<a th:if="${currentPage < totalPages}" th:href="@{'/product/page/'+${currentPage+1}}">Next</a>
+<a th:if="${currentPage < totalPages and session.search == null}" th:href="@{'/product/page/'+${currentPage+1}}">Next</a>
+<a th:if="${currentPage < totalPages and session.search != null}" th:href="@{'/product/page/'+${currentPage+1}+'/search'}">Next</a>
 <span th:unless="${currentPage < totalPages}">Next</span>
 </div>
 <div class="col-sm-1">
-<a th:if="${currentPage < totalPages}" th:href="@{'/product/page/'+${totalPages}}">Last</a>
+<a th:if="${currentPage < totalPages and session.search == null}" th:href="@{'/product/page/'+${totalPages}}">Last</a>
+<a th:if="${currentPage < totalPages and session.search != null}" th:href="@{'/product/page/'+${totalPages}+'/search'}">Last</a>
 <span th:unless="${currentPage < totalPages}">Last</span>
 </div>
 </div>
